--- a/sources/scss/base/_buttons.scss
+++ b/sources/scss/base/_buttons.scss
@@ -1,8 +1,11 @@
+@use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/mixins" as *;
+
 %btn {
 	position: relative;
 	display: inline-block;
 	vertical-align: top;
-	padding: rem(11px) rem(24px);
+	padding: rem(11px,11px) rem(24px,24px);
 	color: $white;
 	font-size: $font-size-base;
 	font-weight: 700;
@@ -10,14 +13,14 @@
 	text-align: center;
 	text-decoration: none;
 	border: none;
-	border-radius: rem(2px);
+	border-radius: rem(2px,px);
 	background-color: $primary-100;
 	transition: background-color 0.3s ease 0s, color 0.3s ease 0s, border-color 0.3s ease 0s;
 	--focucOutlineSpace: -1px;
 	user-select: none;
 
 	@include respond-below(md) {
-		padding: rem(9px) rem(14px);
+		padding: rem(9px,9px) rem(14px,14px);
 	}
 
 	&::before {
@@ -31,7 +34,7 @@
 		visibility: hidden;
 		transition: 0.4s ease;
 		border: 1px solid $gray;
-		border-radius: rem(5px);
+		border-radius: rem(5px,5px);
 		pointer-events: none;
 	}
 
@@ -74,8 +77,8 @@
 	}
 
 	&.-sm {
-		font-size: rem(12px);
-		padding: rem(4px) rem(9px);
+		font-size: rem(12px,12px);
+		padding: rem(4px,4px) rem(9px,9px);
 	}
 }
 
@@ -104,7 +107,7 @@
 			transition: 0.4s ease;
 			border: 1px solid $gray;
 			pointer-events: none;
-			border-radius: rem(20px);
+			border-radius: rem(20px,20px);
 		}
 
 		&::after {
