--- a/sources/scss/base/_core.scss
+++ b/sources/scss/base/_core.scss
@@ -1,7 +1,7 @@
 // Base stuff
-@import 'fonts';
-@import 'normalize';
-@import 'typography';
-@import 'utilities';
-@import 'buttons';
-@import 'forms';
+@use 'fonts';
+@use 'normalize';
+@use 'typography';
+@use 'utilities';
+@use 'buttons';
+@use 'forms';
