--- a/sources/scss/layout/_core.scss
+++ b/sources/scss/layout/_core.scss
@@ -1,4 +1,4 @@
-@import 'default';
-@import 'device-menu';
-@import 'header';
-@import 'footer';
+@use 'default';
+@use 'device-menu';
+@use 'header';
+@use 'footer';
