--- a/sources/scss/layout/_device-menu.scss
+++ b/sources/scss/layout/_device-menu.scss
@@ -1,3 +1,6 @@
+@use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/mixins" as *;
+
 /* responsive nav for small devices */
 $mbnav: ".mbnav";
 $mbbg: $secondary-100;
@@ -10,7 +13,7 @@ $hamburger: ".hamburger";
 
 // Humburger
 #{$hamburger} {
-    --humburgerBox: #{rem(40px)};
+    --humburgerBox: #{rem(40px,40px)};
     display: none;
     align-items: center;
     justify-content: center;
@@ -147,8 +150,8 @@ $hamburger: ".hamburger";
 
         > .menu-inner {
             max-height: 100%;
-            padding-top: rem(85px);
-            padding-bottom: rem(20px);
+            padding-top: rem(85px,85px);
+            padding-bottom: rem(20px,20px);
             background-color: $white;
             pointer-events: auto;
             overflow: hidden auto;
@@ -184,7 +187,7 @@ $hamburger: ".hamburger";
             margin: 0 0 0 0;
             list-style: none;
             color: $primary-100;
-            font-size: rem(20px);
+            font-size: rem(20px,20px);
             font-weight: 500;
             border-bottom: 1px solid $gray;
 
