--- a/sources/scss/abstracts/_mixins.scss
+++ b/sources/scss/abstracts/_mixins.scss
@@ -1,3 +1,6 @@
+@use "@scss/abstracts/variables" as *;
+@use "sass:map";
+
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass mixins.
 // -----------------------------------------------------------------------------
@@ -9,9 +12,9 @@
 @mixin respond-above($breakpoint) {
 
     // If the breakpoint exists in the map.
-    @if map-has-key($breakpoints, $breakpoint) {
+    @if map.has-key($breakpoints, $breakpoint) {
         // Get the breakpoint value.
-        $breakpoint-value: map-get($breakpoints, $breakpoint);
+        $breakpoint-value: map.get($breakpoints, $breakpoint);
 
         // Write the media query.
         @media (min-width: $breakpoint-value) {
@@ -33,9 +36,9 @@
 @mixin respond-below($breakpoint) {
 
     // If the breakpoint exists in the map.
-    @if map-has-key($breakpoints, $breakpoint) {
+    @if map.has-key($breakpoints, $breakpoint) {
         // Get the breakpoint value.
-        $breakpoint-value: map-get($breakpoints, $breakpoint);
+        $breakpoint-value: map.get($breakpoints, $breakpoint);
 
         // Write the media query.
         @media (max-width: ($breakpoint-value - 1)) {
@@ -57,10 +60,10 @@
 @mixin respond-between($lower, $upper) {
 
     // If both the lower and upper breakpoints exist in the map.
-    @if map-has-key($breakpoints, $lower) and map-has-key($breakpoints, $upper) {
+    @if map.has-key($breakpoints, $lower) and map.has-key($breakpoints, $upper) {
         // Get the lower and upper breakpoints.
-        $lower-breakpoint: map-get($breakpoints, $lower);
-        $upper-breakpoint: map-get($breakpoints, $upper);
+        $lower-breakpoint: map.get($breakpoints, $lower);
+        $upper-breakpoint: map.get($breakpoints, $upper);
 
         // Write the media query.
         @media (min-width: $lower-breakpoint) and (max-width: ($upper-breakpoint - 1)) {
@@ -73,13 +76,13 @@
     @else {
 
         // If lower breakpoint is invalid.
-        @if (map-has-key($breakpoints, $lower)==false) {
+        @if (map.has-key($breakpoints, $lower)==false) {
             // Log a warning.
             @warn 'Your lower breakpoint was invalid: #{$lower}.';
         }
 
         // If upper breakpoint is invalid.
-        @if (map-has-key($breakpoints, $upper)==false) {
+        @if (map.has-key($breakpoints, $upper)==false) {
             // Log a warning.
             @warn 'Your upper breakpoint was invalid: #{$upper}.';
         }
@@ -203,7 +206,7 @@
             padding-left: $gutters;
 
             @include respond-below(md) {
-                padding-left: rem(20px);
+                padding-left: rem(20px,20px);
             }
         }
     }
@@ -215,7 +218,7 @@
             padding-right: $gutters;
 
             @include respond-below(md) {
-                padding-right: rem(20px);
+                padding-right: rem(20px,20px);
             }
         }
     }
