--- a/sources/scss/abstracts/_variables.scss
+++ b/sources/scss/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $font-family-base:  'Open Sans', 'Arial', sans-serif !default;
 $icon-family: "iconfontfamily" !important;
 
 // body contect text size
-$font-size-base:  rem($base) !default; //16px (Don't change)
+$font-size-base:  rem(16px,16px) !default; //16px (Don't change)
 
 // Colors
 $primary-100:   #1eb2a6 !default;
@@ -24,15 +24,15 @@ $body-color:    $black !default;
 
 // Heading font Size
 $headingSize: (
-  'h1': rem(50px),
-  'h2': rem(40px),
-  'h3': rem(32px),
-  'h4': rem(25px),
-  'h5': rem(20px),
-  'h6': rem(18px),
+  'h1': rem(50px,50px),
+  'h2': rem(40px,40px),
+  'h3': rem(32px,32px),
+  'h4': rem(25px,25px),
+  'h5': rem(20px,20px),
+  'h6': rem(18px,18px),
 );
 
-$hgroup-margin-bottom: rem(15px) !default;
+$hgroup-margin-bottom: rem(15px,15px) !default;
 $hgroup-font-family:   inherit !default;
 $hgroup-font-weight:   700 !default;
 $hgroup-line-height:   1.1 !default;
@@ -42,7 +42,7 @@ $hgroup-color:         $black !default;
 $label-color:           $black;
 $label-font-weight:     400;
 $label-font-family:     $font-family-base;
-$label-font-size:       rem(14px);
+$label-font-size:       rem(14px,14px);
 
 $input-bg:                 $white;
 $input-font-family:        $font-family-base;
@@ -50,20 +50,20 @@ $input-font-size:          $font-size-base;
 $input-font-weight:        400;
 $input-color:              $black;
 $input-color-placeholder:  rgba($black,0.5);
-$input-height-base:        rem(42px);
+$input-height-base:        rem(42px,42px);
 $input-radius:             0;
 $input-border-color:       $secondary-100;
 $input-border-color-focus: $secondary-100;
-$textarea-height-base:     rem(150px);
+$textarea-height-base:     rem(150px,150px);
 
 // Set assets path
 $img: '../images'; // background-img:url( #{$img}/)
 $fonts: '../fonts';
 
 // Container's maximum width
-$container-width: rem(1170px) !default;
-$gutters: rem(50px);
-$row-gutters: rem(30px);
+$container-width: rem(1170px,1170px) !default;
+$gutters: rem(50px,50px);
+$row-gutters: rem(30px,30px);
 
 // Media Query breakpoints.
 $breakpoints: (
