--- a/sources/scss/base/_normalize.scss
+++ b/sources/scss/base/_normalize.scss
@@ -1,3 +1,6 @@
+@use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/mixins" as *;
+
 /* Reset css
    ========================================================================== */
 html,
