--- a/sources/scss/base/_typography.scss
+++ b/sources/scss/base/_typography.scss
@@ -1,3 +1,6 @@
+@use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/mixins" as *;
+
 /**
  * Basic typography style for copy text
  */
@@ -60,33 +63,33 @@ $size in $headingSize {
 
         @if $key=="h1" {
             @include respond-below(xl) {
-                font-size: rem(42px);
+                font-size: rem(42px,42px);
             }
 
             @include respond-below(md) {
-                font-size: rem(36px);
+                font-size: rem(36px,36px);
             }
         }
 
         @else if $key=="h2" {
             @include respond-below(xl) {
-                font-size: rem(34px);
+                font-size: rem(34px,34px);
             }
 
             @include respond-below(md) {
-                font-size: rem(29px);
+                font-size: rem(29px,29px);
             }
         }
 
         @else if $key=="h3" {
             @include respond-below(md) {
-                font-size: rem(24px);
+                font-size: rem(24px,24px);
             }
         }
 
         @else if $key=="h4" {
             @include respond-below(md) {
-                font-size: rem(20px);
+                font-size: rem(20px,20px);
             }
         }
 
@@ -94,7 +97,7 @@ $size in $headingSize {
             line-height: 1.3;
 
             @include respond-below(md) {
-                font-size: rem(18px);
+                font-size: rem(18px,18px);
             }
         }
 
@@ -102,14 +105,14 @@ $size in $headingSize {
             line-height: 1.3;
 
             @include respond-below(md) {
-                font-size: rem(17px);
+                font-size: rem(17px,17px);
             }
         }
     }
 }
 
 p {
-    margin-bottom: rem(20px);
+    margin-bottom: rem(20px,20px);
 
     &:last-child {
         margin-bottom: 0;
@@ -118,9 +121,9 @@ p {
 
 .eyebrow-text {
     position: relative;
-    font-size: rem(14px);
-    padding-left: rem(10px);
-    margin-bottom: rem(16px);
+    font-size: rem(14px,14px);
+    padding-left: rem(10px,10px);
+    margin-bottom: rem(16px,16px);
     display: inline-block;
 
     &:before {
@@ -135,18 +138,18 @@ p {
 }
 
 :is(ul, ol) {
-    --ulolLeftPadding: #{rem(20px)};
+    --ulolLeftPadding: #{rem(20px,20px)};
     padding-left: var(--ulolLeftPadding);
-    margin-bottom: rem(15px);
+    margin-bottom: rem(15px,15px);
 
     :is(ul, ol) {
-        margin-top: rem(12px);
+        margin-top: rem(12px,12px);
         margin-bottom: 0;
     }
 
     li {
-        padding-top: rem(6px);
-        padding-bottom: rem(6px);
+        padding-top: rem(6px,6px);
+        padding-bottom: rem(6px,6px);
 
         &:last-child {
             padding-bottom: 0;
@@ -179,7 +182,7 @@ ul {
 
             &::before {
                 content: "";
-                top: rem(14px);
+                top: rem(14px,14px);
                 width: var(--ulBox);
                 height: var(--ulBox);
                 background: $secondary-100;
@@ -190,8 +193,8 @@ ul {
                 >li {
                     &::before {
                         border: 1px solid $gray;
-                        height: rem(6px);
-                        width: rem(6px);
+                        height: rem(6px,6px);
+                        width: rem(6px,6px);
                     }
 
                     >ul {
@@ -203,7 +206,7 @@ ul {
                             }
 
                             &::before {
-                                top: em(16px);
+                                top: em(16px,16px);
                                 background: currentColor;
                                 border-radius: 0;
                             }
@@ -215,8 +218,8 @@ ul {
 
         .bullet-check & {
             --ulBox: 24px;
-            padding: 0 0 0 rem(36px);
-            margin-bottom: rem(10px);
+            padding: 0 0 0 rem(36px,36px);
+            margin-bottom: rem(10px,10px);
             position: relative;
 
             &::before {
@@ -257,7 +260,7 @@ ol {
             &:before {
                 content: counter(counter-1) ". ";
                 top: 10px;
-                font-size: em(14px);
+                font-size: em(14px,14px);
             }
 
             >ol {
@@ -278,15 +281,15 @@ ol {
 blockquote {
     position: relative;
     display: block;
-    margin-bottom: rem(25px);
-    padding: rem(20px) rem(20px);
+    margin-bottom: rem(25px,25px);
+    padding: rem(20px,20px) rem(20px,20px);
     text-align: left;
     line-height: 2;
-    font-size: rem(18px);
+    font-size: rem(18px,18px);
     font-style: italic;
     color: $black;
     background-color: $gray;
-    border-left: rem(4px) solid $primary-100;
+    border-left: rem(4px,4px) solid $primary-100;
 
     p {
         font-size: inherit;
@@ -299,10 +302,10 @@ blockquote {
 hr {
     width: 100%;
     height: 0;
-    // margin: rem(10px) auto rem(40px);
-    margin: rem(30px) auto;
+    // margin: rem(10px,10px) auto rem(40px,40px);
+    margin: rem(30px,30px) auto;
     border: 0 $black solid;
-    border-top-width: rem(1px);
+    border-top-width: rem(1px,1px);
     overflow: visible;
 }
 
@@ -338,7 +341,7 @@ a {
     }
 
     &.tab-outline {
-        outline-offset: rem(3px);
+        outline-offset: rem(3px,3px);
         outline: 1px solid;
         // border-radius: 6px;
     }
@@ -390,14 +393,14 @@ table {
     td,
     th {
         vertical-align: bottom;
-        border-bottom: rem(1px) solid $gray;
-        padding: rem(10px);
+        border-bottom: rem(1px,1px) solid $gray;
+        padding: rem(10px,10px);
     }
 }
 
 .fancybox__content {
     >.carousel__button.is-close {
-        top: rem(-50px);
+        top: rem(-50px,-50px);
         right: 0;
     }
 }
