--- a/sources/scss/templates/_comp-hero.scss
+++ b/sources/scss/templates/_comp-hero.scss
@@ -1,5 +1,5 @@
 // variable and mixin
-// @import 'abstracts/core' ;
+// @use 'abstracts/core' ;
 
 .hero-style {
     @include container-space(left);
