--- a/sources/scss/base/_forms.scss
+++ b/sources/scss/base/_forms.scss
@@ -25,7 +25,7 @@ input[type="tel"],
 input[type="search"],
 input[type="date"],
 textarea {
-	-webkit-appearance: none;
+	appearance: none;
 	outline: none;
 }
 
@@ -68,7 +68,7 @@ textarea {
 }
 
 select {
-	-webkit-appearance: none;
+	appearance: none;
 	padding-right: 1.875em;
 	background-color: transparent;
 	background-image: image("select-down-arrow.svg");
@@ -93,10 +93,10 @@ button {
 
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
-	-webkit-appearance: none;
+	appearance: none;
 }
 
-/* Change Autocomplete styles in Chrome*/
+/* Change Autocomplete styles in Chrome */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -140,7 +140,7 @@ select:-webkit-autofill:focus {
 
 			&:checked {
 				+.radio-custom-label {
-					&:before {
+					&::before {
 						background-color: $black;
 					}
 				}
@@ -152,7 +152,7 @@ select:-webkit-autofill:focus {
 			cursor: pointer;
 			color: $black;
 
-			&:before {
+			&::before {
 				content: "";
 				display: inline-block;
 				vertical-align: middle;
@@ -163,7 +163,7 @@ select:-webkit-autofill:focus {
 				background-color: $white;
 				border: rem(2px,2px) solid $white;
 				border-radius: 50%;
-				box-shadow: 0 0 0px 2px $black;
+				box-shadow: 0 0 0 2px $black;
 				cursor: pointer;
 			}
 		}
@@ -181,7 +181,7 @@ select:-webkit-autofill:focus {
 		padding: 0;
 		cursor: pointer;
 
-		&:checked+label:after {
+		&:checked+label::after {
 			content: "";
 			position: absolute;
 			top: 4px;
@@ -208,7 +208,7 @@ select:-webkit-autofill:focus {
 			padding: rem(8px,8px);
 			background-color: transparent;
 			border: rem(2px,2px) solid $secondary-100;
-			-webkit-appearance: none;
+			appearance: none;
 			cursor: pointer;
 		}
 	}
