--- a/sources/scss/base/_typography.scss
+++ b/sources/scss/base/_typography.scss
@@ -8,9 +8,10 @@
 
 html {
     height: 100%;
+
     @include rem-baseline(16px);
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+
+    text-size-adjust: 100%;
 }
 
 body {
@@ -69,9 +70,7 @@ $size in $headingSize {
             @include respond-below(md) {
                 font-size: rem(36px,36px);
             }
-        }
-
-        @else if $key=="h2" {
+        } @else if $key=="h2" {
             @include respond-below(xl) {
                 font-size: rem(34px,34px);
             }
@@ -79,29 +78,21 @@ $size in $headingSize {
             @include respond-below(md) {
                 font-size: rem(29px,29px);
             }
-        }
-
-        @else if $key=="h3" {
+        } @else if $key=="h3" {
             @include respond-below(md) {
                 font-size: rem(24px,24px);
             }
-        }
-
-        @else if $key=="h4" {
+        } @else if $key=="h4" {
             @include respond-below(md) {
                 font-size: rem(20px,20px);
             }
-        }
-
-        @else if $key=="h5" {
+        } @else if $key=="h5" {
             line-height: 1.3;
 
             @include respond-below(md) {
                 font-size: rem(18px,18px);
             }
-        }
-
-        @else if $key=="h6" {
+        } @else if $key=="h6" {
             line-height: 1.3;
 
             @include respond-below(md) {
@@ -126,7 +117,7 @@ p {
     margin-bottom: rem(16px,16px);
     display: inline-block;
 
-    &:before {
+    &::before {
         content: "";
         position: absolute;
         top: 0;
@@ -139,6 +130,7 @@ p {
 
 :is(ul, ol) {
     --ulolLeftPadding: #{rem(20px,20px)};
+
     padding-left: var(--ulolLeftPadding);
     margin-bottom: rem(15px,15px);
 
@@ -159,7 +151,7 @@ p {
             position: relative;
             list-style: none;
 
-            &:before {
+            &::before {
                 position: absolute;
                 left: calc(var(--ulolLeftPadding) * -1);
                 color: $primary-100;
@@ -202,12 +194,12 @@ ul {
                             --ulBox: 4px;
 
                             &::marker {
-                                color: currentColor;
+                                color: currentcolor;
                             }
 
                             &::before {
                                 top: em(16px,16px);
-                                background: currentColor;
+                                background: currentcolor;
                                 border-radius: 0;
                             }
                         }
@@ -218,12 +210,14 @@ ul {
 
         .bullet-check & {
             --ulBox: 24px;
+
             padding: 0 0 0 rem(36px,36px);
             margin-bottom: rem(10px,10px);
             position: relative;
 
             &::before {
                 @include icon("k");
+
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -231,7 +225,8 @@ ul {
                 height: var(--ulBox);
                 font-size: 24px;
                 color: $primary-100;
-                @include flex-center();
+
+                @include flex-center;
 
                 .bg-dark & {
                     // color: $white;
@@ -240,7 +235,7 @@ ul {
         }
 
         .bullet-check.-secondary & {
-            &:before {
+            &::before {
                 color: $secondary-100;
             }
         }
@@ -257,7 +252,7 @@ ol {
         .bullet-styled & {
             counter-increment: counter-1;
 
-            &:before {
+            &::before {
                 content: counter(counter-1) ". ";
                 top: 10px;
                 font-size: em(14px,14px);
@@ -269,7 +264,7 @@ ol {
                 >li {
                     counter-increment: counter-2;
 
-                    &:before {
+                    &::before {
                         content: counter(counter-2, lower-alpha) ". ";
                     }
                 }
@@ -282,7 +277,7 @@ blockquote {
     position: relative;
     display: block;
     margin-bottom: rem(25px,25px);
-    padding: rem(20px,20px) rem(20px,20px);
+    padding: rem(20px,20px);
     text-align: left;
     line-height: 2;
     font-size: rem(18px,18px);
@@ -302,6 +297,7 @@ blockquote {
 hr {
     width: 100%;
     height: 0;
+
     // margin: rem(10px,10px) auto rem(40px,40px);
     margin: rem(30px,30px) auto;
     border: 0 $black solid;
@@ -327,7 +323,7 @@ picture {
 }
 
 /* Link
-------------------------------------------------------------------------------*/
+------------------------------------------------------------------------------ */
 a {
     color: $primary-100;
     transition:
@@ -343,6 +339,7 @@ a {
     &.tab-outline {
         outline-offset: rem(3px,3px);
         outline: 1px solid;
+
         // border-radius: 6px;
     }
 
@@ -366,7 +363,7 @@ a {
 }
 
 /* Tables
-------------------------------------------------------------------------------*/
+------------------------------------------------------------------------------ */
 table {
     border-spacing: 0;
     border-collapse: collapse;
