--- a/sources/scss/layout/_device-menu.scss
+++ b/sources/scss/layout/_device-menu.scss
@@ -14,6 +14,7 @@ $hamburger: ".hamburger";
 // Humburger
 #{$hamburger} {
     --humburgerBox: #{rem(40px,40px)};
+
     display: none;
     align-items: center;
     justify-content: center;
@@ -24,9 +25,11 @@ $hamburger: ".hamburger";
     text-align: center;
     background-color: transparent;
     z-index: 999;
+
     @include mobile {
         display: flex;
     }
+
     &:hover,
     &:focus {
         background-color: transparent;
@@ -40,7 +43,6 @@ $hamburger: ".hamburger";
         right: 0;
         display: block;
         margin: 0 auto;
-        border-radius: 0;
         height: 2px;
         width: 100%;
         background: $primary-100;
@@ -48,8 +50,8 @@ $hamburger: ".hamburger";
         cursor: pointer;
         border-radius: 2px;
 
-        &:before,
-        &:after {
+        &::before,
+        &::after {
             content: "";
             position: absolute;
             display: block;
@@ -61,29 +63,30 @@ $hamburger: ".hamburger";
             border-radius: 2px;
         }
 
-        &:before {
+        &::before {
             top: -8px;
         }
 
-        &:after {
+        &::after {
             bottom: -8px;
         }
     }
+
     &.is-clicked {
         span {
             background-color: transparent !important;
 
-            &:before,
-            &:after {
+            &::before,
+            &::after {
                 top: 0;
                 background-color: $primary-100;
             }
 
-            &:before {
+            &::before {
                 transform: rotate(45deg);
             }
 
-            &:after {
+            &::after {
                 transform: translateY(-6px) rotate(-45deg);
                 top: 6px;
             }
@@ -135,6 +138,7 @@ $hamburger: ".hamburger";
 
     .menu-wrap {
         --leftSlide: 0;
+
         position: absolute;
         width: 100%;
         height: 100%;
@@ -163,10 +167,12 @@ $hamburger: ".hamburger";
         position: static;
         left: 0;
         width: 100%;
+
         // max-height: calc(100vh - 145px);
         margin: 0;
         padding: 0 20px;
         transition: 0.4s ease;
+
         // overflow: hidden auto;
 
         li {
@@ -184,7 +190,7 @@ $hamburger: ".hamburger";
             flex-wrap: wrap;
             justify-content: space-between;
             padding: 0;
-            margin: 0 0 0 0;
+            margin: 0;
             list-style: none;
             color: $primary-100;
             font-size: rem(20px,20px);
@@ -209,7 +215,9 @@ $hamburger: ".hamburger";
 
             %aAfter {
                 content: "";
+
                 --sArrowWidth: 10px;
+
                 display: flex;
                 align-items: center;
                 margin: auto;
@@ -225,7 +233,7 @@ $hamburger: ".hamburger";
                 position: relative;
                 display: block;
                 padding: 10px 0;
-                color: currentColor;
+                color: currentcolor;
                 line-height: 1.3;
                 text-decoration: none !important;
                 z-index: 2;
@@ -244,7 +252,9 @@ $hamburger: ".hamburger";
                     bottom: 0;
                     margin-left: auto;
                     margin-right: 0;
+
                     @extend %aAfter;
+
                     display: none;
                 }
             }
@@ -330,12 +340,13 @@ $hamburger: ".hamburger";
         .back-click {
             width: 100%;
             order: -1;
-            color: currentColor;
+            color: currentcolor;
             padding: 15px 0;
             font-weight: 400;
 
             &::before {
                 @include icon("a");
+
                 position: static;
                 display: inline-block;
                 width: auto;
@@ -345,6 +356,7 @@ $hamburger: ".hamburger";
                 margin-bottom: 3px;
                 font-size: 18px;
                 border: 0;
+
                 // transform: scaleX(-1);
             }
         }
@@ -353,10 +365,7 @@ $hamburger: ".hamburger";
     // backdrop
     &__backdrop {
         position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
+        inset: 0;
         visibility: hidden;
         transition: all 0.4s ease-in;
         background: rgba($black, 0.55);
@@ -366,10 +375,7 @@ $hamburger: ".hamburger";
 
     &__overlay {
         position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
+        inset: 0;
         transition: all 0.4s ease-in;
         background: rgba($black, 0.5);
         opacity: 0;
@@ -387,6 +393,7 @@ $hamburger: ".hamburger";
         + header {
             // position: fixed;
         }
+
         .btn-wrap {
             transform: translateY(0);
         }
