--- a/sources/scss/layout/_header.scss
+++ b/sources/scss/layout/_header.scss
@@ -4,40 +4,26 @@
 /* --- header --- */
 .main-header {
 	position: relative;
-	width: 100%;
-	height: auto;
-	background-color: $white;
-	z-index: 999;
+	background-color: blueviolet;
+}
 
-	.brand {
-		display: inline-flex;
-		vertical-align: middle;
-		width: rem(100px,100px);
+.navigation {
+	word-break: keep-all;
+
+	ul {
+		display: flex;
+		padding: 0;
+		margin: 0;
+		list-style: none;
+
+		li {
+			padding: 0;
+			margin: 0 rem(15px, 15px);
+			list-style: none;
+		}
 	}
 
-	/* nav */
-	.navigation {
-		word-break: keep-all;
-
-		@include respond-below(md){
-			display: none;
-		}
-
-		ul {
-			display: flex;
-			padding: 0;
-			margin: 0;
-			list-style: none;
-
-			li {
-				padding: 0;
-				margin: 0 rem(15px,15px);
-				list-style: none;
-
-				a {
-					text-decoration: none;
-				}
-			}
-		}
+	a {
+		text-decoration: none;
 	}
 }
