--- a/sources/scss/base/_forms.scss
+++ b/sources/scss/base/_forms.scss
@@ -76,13 +76,13 @@ select {
 	background-position: right 0.5em center;
 	background-repeat: no-repeat;
 	cursor: pointer;
+
+	&:focus {
+		outline: none;
+	}
 }
 
-select:focus {
-	outline: none;
-}
-
-/* for ie */
+/* for IE */
 select::-ms-expand {
 	display: none;
 }
@@ -96,7 +96,6 @@ input[type="search"]::-webkit-search-decoration {
 	appearance: none;
 }
 
-/* Change Autocomplete styles in Chrome */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -107,9 +106,6 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-	// border: 1px solid green;
-	// -webkit-text-fill-color: green;
-	// -webkit-box-shadow: 0 0 0px 1000px #000 inset;
 	transition: background-color 5000s ease-in-out 0s;
 }
 
@@ -117,7 +113,6 @@ select:-webkit-autofill:focus {
 	margin-bottom: rem(20px,20px);
 }
 
-// Custom radio button
 .radio-btn-group {
 	.radio-option {
 		display: inline-block;
@@ -126,25 +121,6 @@ select:-webkit-autofill:focus {
 
 		&:first-child {
 			padding-left: 0;
-		}
-
-		.radio-custom {
-			position: absolute;
-			opacity: 0;
-
-			&:focus {
-				+.radio-custom-label {
-					outline: none;
-				}
-			}
-
-			&:checked {
-				+.radio-custom-label {
-					&::before {
-						background-color: $black;
-					}
-				}
-			}
 		}
 
 		.radio-custom-label {
@@ -167,12 +143,27 @@ select:-webkit-autofill:focus {
 				cursor: pointer;
 			}
 		}
+
+		.radio-custom {
+			position: absolute;
+			opacity: 0;
+
+			&:focus {
+				+ .radio-custom-label {
+					outline: none;
+				}
+			}
+
+			&:checked {
+				+ .radio-custom-label::before {
+					background-color: $black;
+				}
+			}
+		}
 	}
 }
 
-// Custom Checkbox
-.checkbox,
-.gfield_checkbox {
+.checkbox {
 	input[type="checkbox"] {
 		display: none;
 		width: initial;
@@ -181,7 +172,7 @@ select:-webkit-autofill:focus {
 		padding: 0;
 		cursor: pointer;
 
-		&:checked+label::after {
+		&:checked + label::after {
 			content: "";
 			position: absolute;
 			top: 4px;
