--- a/sources/scss/base/_typography.scss
+++ b/sources/scss/base/_typography.scss
@@ -1,10 +1,10 @@
+@use "sass:math";
 @use "@scss/abstracts/variables" as *;
 @use "@scss/abstracts/mixins" as *;
 
 /**
  * Basic typography style for copy text
  */
-@use "sass:math";
 
 html {
     height: 100%;
@@ -21,7 +21,9 @@ body {
     min-height: 100%;
     height: auto;
     color: $body-color;
-    font-size: $font-size-base;
+
+    // font-size: $font-size-base;
+    font-size: 16px;
     font-family: $font-family-base;
     line-height: 1.5;
     font-weight: 500;
@@ -39,15 +41,13 @@ body {
 }
 
 // Heading style
-@each $key,
-$size in $heading-size {
-
+@each $key, $size in $heading-size {
     #{$key},
     .#{$key} {
         margin-bottom: $hgroup-margin-bottom;
         color: $hgroup-color;
         font-family: $hgroup-font-family;
-        font-size: $size;
+        font-size: 30px;
         font-weight: $hgroup-font-weight;
         line-height: $hgroup-line-height;
         word-break: keep-all;
@@ -64,46 +64,46 @@ $size in $heading-size {
 
         @if $key == "h1" {
             @include respond-below(xl) {
-                font-size: rem(42px,42px);
+                font-size: rem(42px, 42px);
             }
 
             @include respond-below(md) {
-                font-size: rem(36px,36px);
+                font-size: rem(36px, 36px);
             }
         } @else if $key == "h2" {
             @include respond-below(xl) {
-                font-size: rem(34px,34px);
+                font-size: rem(34px, 34px);
             }
 
             @include respond-below(md) {
-                font-size: rem(29px,29px);
+                font-size: rem(29px, 29px);
             }
         } @else if $key == "h3" {
             @include respond-below(md) {
-                font-size: rem(24px,24px);
+                font-size: rem(24px, 24px);
             }
         } @else if $key == "h4" {
             @include respond-below(md) {
-                font-size: rem(20px,20px);
+                font-size: rem(20px, 20px);
             }
         } @else if $key == "h5" {
             line-height: 1.3;
 
             @include respond-below(md) {
-                font-size: rem(18px,18px);
+                font-size: rem(18px, 18px);
             }
         } @else if $key == "h6" {
             line-height: 1.3;
 
             @include respond-below(md) {
-                font-size: rem(17px,17px);
+                font-size: rem(17px, 17px);
             }
         }
     }
 }
 
 p {
-    margin-bottom: rem(20px,20px);
+    margin-bottom: rem(20px, 20px);
 
     &:last-child {
         margin-bottom: 0;
@@ -112,9 +112,9 @@ p {
 
 .eyebrow-text {
     position: relative;
-    font-size: rem(14px,14px);
-    padding-left: rem(10px,10px);
-    margin-bottom: rem(16px,16px);
+    font-size: rem(14px, 14px);
+    padding-left: rem(10px, 10px);
+    margin-bottom: rem(16px, 16px);
     display: inline-block;
 
     &::before {
@@ -129,35 +129,17 @@ p {
 }
 
 :is(ul, ol) {
-    --ulolLeftPadding: #{rem(20px,20px)};
+    --ulol-left-padding: #{rem(20px, 20px)};
 
-    padding-left: var(--ulolLeftPadding);
-    margin-bottom: rem(15px,15px);
-
-    :is(ul, ol) {
-        margin-top: rem(12px,12px);
-        margin-bottom: 0;
-    }
+    padding-left: var(--ulol-left-padding);
+    margin-bottom: rem(15px, 15px);
 
     li {
-        padding-top: rem(6px,6px);
-        padding-bottom: rem(6px,6px);
+        padding-top: rem(6px, 6px);
+        padding-bottom: rem(6px, 6px);
 
         &:last-child {
             padding-bottom: 0;
-        }
-
-        .bullet-styled & {
-            position: relative;
-            list-style: none;
-
-            &::before {
-                position: absolute;
-                left: calc(var(--ulolLeftPadding) * -1);
-                color: $primary-100;
-                font-weight: 700;
-                line-height: 1;
-            }
         }
     }
 }
@@ -169,36 +151,36 @@ ul {
             font-size: 1.2em;
         }
 
-        .bullet-styled & {
-            --ulBox: 8px;
+        .bullet-styled {
+            position: relative;
+            list-style: none;
 
             &::before {
-                content: "";
-                top: rem(14px,14px);
-                width: var(--ulBox);
-                height: var(--ulBox);
-                background: $secondary-100;
-                border-radius: 100%;
+                position: absolute;
+                left: calc(var(--ulol-left-padding) * -1);
+                color: $primary-100;
+                font-weight: 700;
+                line-height: 1;
             }
 
             >ul {
                 >li {
                     &::before {
                         border: 1px solid $gray;
-                        height: rem(6px,6px);
-                        width: rem(6px,6px);
+                        height: rem(6px, 6px);
+                        width: rem(6px, 6px);
                     }
 
                     >ul {
                         >li {
-                            --ulBox: 4px;
+                            --ulbox: 4px;
 
                             &::marker {
                                 color: currentcolor;
                             }
 
                             &::before {
-                                top: em(16px,16px);
+                                top: em(16px, 16px);
                                 background: currentcolor;
                                 border-radius: 0;
                             }
@@ -208,11 +190,9 @@ ul {
             }
         }
 
-        .bullet-check & {
-            --ulBox: 24px;
-
-            padding: 0 0 0 rem(36px,36px);
-            margin-bottom: rem(10px,10px);
+        .bullet-check {
+            padding: 0 0 0 rem(36px, 36px);
+            margin-bottom: rem(10px, 10px);
             position: relative;
 
             &::before {
@@ -221,8 +201,8 @@ ul {
                 position: absolute;
                 top: 0;
                 left: 0;
-                width: var(--ulBox);
-                height: var(--ulBox);
+                width: var(--ulbox);
+                height: var(--ulbox);
                 font-size: 24px;
                 color: $primary-100;
 
@@ -232,18 +212,13 @@ ul {
                     // color: $white;
                 }
             }
-        }
 
-        .bullet-check.-secondary & {
-            &::before {
-                color: $secondary-100;
+            &.-secondary {
+                &::before {
+                    color: $secondary-100;
+                }
             }
         }
-    }
-
-    .bullet-check & {
-        padding-left: 0;
-        list-style: none;
     }
 }
 
@@ -255,7 +230,7 @@ ol {
             &::before {
                 content: counter(counter-1) ". ";
                 top: 10px;
-                font-size: em(14px,14px);
+                font-size: em(14px, 14px);
             }
 
             >ol {
@@ -276,15 +251,15 @@ ol {
 blockquote {
     position: relative;
     display: block;
-    margin-bottom: rem(25px,25px);
-    padding: rem(20px,20px);
+    margin-bottom: rem(25px, 25px);
+    padding: rem(20px, 20px);
     text-align: left;
     line-height: 2;
-    font-size: rem(18px,18px);
+    font-size: rem(18px, 18px);
     font-style: italic;
     color: $black;
     background-color: $gray;
-    border-left: rem(4px,4px) solid $primary-100;
+    border-left: rem(4px, 4px) solid $primary-100;
 
     p {
         font-size: inherit;
@@ -297,11 +272,9 @@ blockquote {
 hr {
     width: 100%;
     height: 0;
-
-    // margin: rem(10px,10px) auto rem(40px,40px);
-    margin: rem(30px,30px) auto;
+    margin: rem(30px, 30px) auto;
     border: 0 $black solid;
-    border-top-width: rem(1px,1px);
+    border-top-width: rem(1px, 1px);
     overflow: visible;
 }
 
@@ -322,8 +295,7 @@ picture {
     vertical-align: top;
 }
 
-/* Link
------------------------------------------------------------------------------- */
+/* Link */
 a {
     color: $primary-100;
     transition:
@@ -337,10 +309,8 @@ a {
     }
 
     &.tab-outline {
-        outline-offset: rem(3px,3px);
+        outline-offset: rem(3px, 3px);
         outline: 1px solid;
-
-        // border-radius: 6px;
     }
 
     p & {
@@ -362,8 +332,7 @@ a {
     }
 }
 
-/* Tables
------------------------------------------------------------------------------- */
+/* Tables */
 table {
     border-spacing: 0;
     border-collapse: collapse;
@@ -390,16 +359,16 @@ table {
     td,
     th {
         vertical-align: bottom;
-        border-bottom: rem(1px,1px) solid $gray;
-        padding: rem(10px,10px);
+        border-bottom: rem(1px, 1px) solid $gray;
+        padding: rem(10px, 10px);
     }
 }
 
+/* stylelint-disable selector-class-pattern */
 .fancybox__content {
     >.carousel__button.is-close {
-        top: rem(-50px,-50px);
+        top: rem(-50px, -50px);
         right: 0;
     }
 }
-
-// Dark Background
+/* stylelint-enable selector-class-pattern */
