--- a/sources/scss/layout/_device-menu.scss
+++ b/sources/scss/layout/_device-menu.scss
@@ -1,7 +1,6 @@
 @use "@scss/abstracts/variables" as *;
 @use "@scss/abstracts/mixins" as *;
-
-/* responsive nav for small devices */
+/* stylelint-disable max-nesting-depth */
 $mbnav: ".mbnav";
 $mbbg: $secondary-100;
 $line: $secondary-100;
@@ -11,15 +10,14 @@ $menulevel2: 16px;
 $menulevel3: 14px;
 $hamburger: ".hamburger";
 
-// Humburger
 #{$hamburger} {
-    --humburgerBox: #{rem(40px,40px)};
+    --humburgerbox: #{rem(40px,40px)};
 
     display: none;
     align-items: center;
     justify-content: center;
-    width: var(--humburgerBox);
-    height: var(--humburgerBox);
+    width: var(--humburgerbox);
+    height: var(--humburgerbox);
     padding: 0;
     margin: 0;
     text-align: center;
@@ -94,7 +92,6 @@ $hamburger: ".hamburger";
     }
 }
 
-// mobile nav
 #{$mbnav} {
     position: relative;
     display: none;
@@ -130,20 +127,19 @@ $hamburger: ".hamburger";
         background: rgba($mbbg, 1);
     }
 
-    // mobile menu logo
     &__logo {
         color: $white;
         padding: 15px;
     }
 
     .menu-wrap {
-        --leftSlide: 0;
+        --left-slide: 0;
 
         position: absolute;
         width: 100%;
         height: 100%;
         top: 0;
-        right: var(--leftSlide);
+        right: var(--left-slide);
         transition: 0.4s ease;
 
         .menu-wrap {
@@ -162,18 +158,13 @@ $hamburger: ".hamburger";
         }
     }
 
-    // menu
     ul {
         position: static;
         left: 0;
         width: 100%;
-
-        // max-height: calc(100vh - 145px);
         margin: 0;
         padding: 0 20px;
         transition: 0.4s ease;
-
-        // overflow: hidden auto;
 
         li {
             &.is-open {
@@ -213,17 +204,17 @@ $hamburger: ".hamburger";
                 }
             }
 
-            %aAfter {
+            %after {
                 content: "";
 
-                --sArrowWidth: 10px;
+                --sarrow-width: 10px;
 
                 display: flex;
                 align-items: center;
                 margin: auto;
-                width: var(--sArrowWidth);
-                height: var(--sArrowWidth);
-                border: calc(var(--sArrowWidth) / 4) solid $primary-100;
+                width: var(--sarrow-width);
+                height: var(--sarrow-width);
+                border: calc(var(--sarrow-width) / 4) solid $primary-100;
                 border-left: 0;
                 border-bottom: 0;
                 transform: rotate(45deg);
@@ -241,10 +232,6 @@ $hamburger: ".hamburger";
                 flex: 1 1 auto;
                 order: -1;
 
-                &:hover {
-                    // color: $white;
-                }
-
                 &::after {
                     position: absolute;
                     top: 0;
@@ -253,7 +240,7 @@ $hamburger: ".hamburger";
                     margin-left: auto;
                     margin-right: 0;
 
-                    @extend %aAfter;
+                    @extend %after;
 
                     display: none;
                 }
@@ -273,7 +260,7 @@ $hamburger: ".hamburger";
                 }
 
                 &::before {
-                    @extend %aAfter;
+                    @extend %after;
 
                     .color-mbnav & {
                         color: $primary-100 !important;
@@ -356,13 +343,10 @@ $hamburger: ".hamburger";
                 margin-bottom: 3px;
                 font-size: 18px;
                 border: 0;
-
-                // transform: scaleX(-1);
             }
         }
     }
 
-    // backdrop
     &__backdrop {
         position: fixed;
         inset: 0;
@@ -388,12 +372,7 @@ $hamburger: ".hamburger";
         }
     }
 
-    // after open
     &.is-open {
-        + header {
-            // position: fixed;
-        }
-
         .btn-wrap {
             transform: translateY(0);
         }
@@ -407,3 +386,4 @@ $hamburger: ".hamburger";
         }
     }
 }
+/* stylelint-enable max-nesting-depth */
