--- a/sources/scss/abstracts/_function.scss
+++ b/sources/scss/abstracts/_function.scss
@@ -1,71 +1,16 @@
 @use "sass:math";
 
-$base: 16px;
-$decimal-value: true;
+$base: 16px !default;
+$decimal-value: true !default;
 
-@function decimal-round($number, $digits: 0, $mode: round) {
-    $n: 1;
-
-    // $number must be a number
-    @if type-of($number) != number {
-        @warn "#{$number} is not a number.";
-        @return $number;
-    }
-
-    // $digits must be a unitless number
-    @if type-of($digits) != number {
-        @warn "#{$digits} is not a number.";
-        @return $number;
-    } @else if not unitless($digits) {
-        @warn "#{$digits} has a unit.";
-        @return $number;
-    }
-
-    @for $i from 1 through $digits {
-        $n: $n * 10;
-    }
-
-    @if $mode == round {
-        @return math.div(round($number * $n), $n);
-    } @else if $mode == ceil {
-        @return math.div(ceil($number * $n), $n);
-    } @else if $mode == floor {
-        @return math.div(floor($number * $n), $n);
-    } @else {
-        @warn "#{$mode} is undefined keyword.";
-        @return $number;
-    }
+@function round-to($value, $digits: 3) {
+  $multiplier: math.pow(10, $digits);
+  @return math.div(math.round($value * $multiplier), $multiplier);
 }
 
-@function decimal-ceil($number, $digits: 0) {
-    @return decimal-round($number, $digits, ceil);
-}
-
-@function decimal-floor($number, $digits: 0) {
-    @return decimal-round($number, $digits, floor);
-}
-
-// PX to REM
 @function rem($target, $context: $base) {
-    @if $decimal-value == true {
-        @return decimal-ceil(math.div($target, $context)) + 0;
-    } @else {
-        @return math.div($target, $context) + 0;
-    }
-}
-
-// PX to EM
-@function em($target, $context: $base) {
-    @if $decimal-value == true {
-        @return decimal-ceil(math.div($target, $context)) + 0;
-    } @else {
-        @return math.div($target, $context) + 0;
-    }
-}
-
-// PX to PERCENT
-@function pxtopercent($target, $parent: $base) {
-    @return percentage(math.div($target, $parent));
+  $result: math.div($target, $context);
+  @return if($decimal-value, round-to($result, 3), $result) * 1rem;
 }
 
 // aspect-ratio
