--- a/sources/scss/components/_hero-banner.scss
+++ b/sources/scss/components/_hero-banner.scss
@@ -1,3 +1,7 @@
+@use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
+@use "@scss/abstracts/mixins" as *;
+
 .entry-banner {
     position: relative;
     overflow: hidden;
