--- a/sources/scss/base/_buttons.scss
+++ b/sources/scss/base/_buttons.scss
@@ -1,4 +1,5 @@
 @use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
 @use "@scss/abstracts/mixins" as *;
 
 %btn {
@@ -7,7 +8,7 @@
 	position: relative;
 	display: inline-block;
 	vertical-align: top;
-	padding: rem(11px,11px) rem(24px,24px);
+	padding: rem(11px) rem(24px);
 	color: $white;
 	font-size: $font-size-base;
 	font-weight: 700;
@@ -15,13 +16,13 @@
 	text-align: center;
 	text-decoration: none;
 	border: none;
-	border-radius: rem(2px,px);
+	border-radius: rem(2px);
 	background-color: $primary-100;
 	transition: background-color 0.3s ease 0s, color 0.3s ease 0s, border-color 0.3s ease 0s;
 	user-select: none;
 
 	@include respond-below(md) {
-		padding: rem(9px,9px) rem(14px,14px);
+		padding: rem(9px) rem(14px);
 	}
 
 	&::before {
@@ -32,7 +33,7 @@
 		visibility: hidden;
 		transition: 0.4s ease;
 		border: 1px solid $gray;
-		border-radius: rem(5px,5px);
+		border-radius: rem(5px);
 		pointer-events: none;
 	}
 
@@ -76,8 +77,8 @@
 	}
 
 	&.-sm {
-		font-size: rem(12px,12px);
-		padding: rem(4px,4px) rem(9px,9px);
+		font-size: rem(12px);
+		padding: rem(4px) rem(9px);
 	}
 }
 
@@ -103,14 +104,14 @@
 			transition: 0.4s ease;
 			border: 1px solid $gray;
 			pointer-events: none;
-			border-radius: rem(20px,20px);
+			border-radius: rem(20px);
 		}
 
 		&::after {
 			@include icon("c");
 
 			display: inline-flex;
-			font-size: em(9px, 16px);
+			font-size: em(9px,);
 			margin-left: 8px;
 			color: $primary-100;
 			transition: 0.4s ease;
