--- a/sources/scss/base/_forms.scss
+++ b/sources/scss/base/_forms.scss
@@ -1,9 +1,10 @@
 @use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
 @use "@scss/abstracts/mixins" as *;
 
 form label {
 	display: block;
-	margin-bottom: rem(10px,10px);
+	margin-bottom: rem(10px);
 	color: $label-color;
 	font-family: $label-font-family;
 	font-size: $label-font-size;
@@ -32,7 +33,7 @@ textarea {
 textarea {
 	display: block;
 	height: $textarea-height-base;
-	padding: rem(10px,10px) rem(15px,15px);
+	padding: rem(10px) rem(15px);
 	resize: none;
 	overflow: auto;
 }
@@ -49,11 +50,11 @@ textarea,
 select {
 	width: 100%;
 	height: $input-height-base;
-	padding: 0 rem(15px,15px);
+	padding: 0 rem(15px);
 	color: $input-color;
 	font-size: $input-font-size;
 	font-weight: $input-font-weight;
-	border: rem(1px,1px) solid $input-border-color;
+	border: rem(1px) solid $input-border-color;
 	border-radius: $input-radius;
 
 	&:focus {
@@ -72,7 +73,7 @@ select {
 	padding-right: 1.875em;
 	background-color: transparent;
 	background-image: image("select-down-arrow.svg");
-	background-size: rem(14px,14px) rem(7px,7px);
+	background-size: rem(14px) rem(7px);
 	background-position: right 0.5em center;
 	background-repeat: no-repeat;
 	cursor: pointer;
@@ -110,14 +111,14 @@ select:-webkit-autofill:focus {
 }
 
 .form-group {
-	margin-bottom: rem(20px,20px);
+	margin-bottom: rem(20px);
 }
 
 .radio-btn-group {
 	.radio-option {
 		display: inline-block;
 		vertical-align: middle;
-		padding: 0 rem(10px,10px);
+		padding: 0 rem(10px);
 
 		&:first-child {
 			padding-left: 0;
@@ -132,12 +133,12 @@ select:-webkit-autofill:focus {
 				content: "";
 				display: inline-block;
 				vertical-align: middle;
-				height: rem(10px,10px);
-				width: rem(10px,10px);
-				margin-top: rem(3px,3px);
-				margin-right: rem(10px,10px);
+				height: rem(10px);
+				width: rem(10px);
+				margin-top: rem(3px);
+				margin-right: rem(10px);
 				background-color: $white;
-				border: rem(2px,2px) solid $white;
+				border: rem(2px) solid $white;
 				border-radius: 50%;
 				box-shadow: 0 0 0 2px $black;
 				cursor: pointer;
@@ -178,10 +179,10 @@ select:-webkit-autofill:focus {
 			top: 4px;
 			left: 7px;
 			display: block;
-			width: rem(5px,5px);
-			height: rem(10px,10px);
+			width: rem(5px);
+			height: rem(10px);
 			border: solid $secondary-100;
-			border-width: 0 rem(2px,2px) rem(2px,2px) 0;
+			border-width: 0 rem(2px) rem(2px) 0;
 			transform: rotate(42deg);
 		}
 	}
@@ -195,10 +196,10 @@ select:-webkit-autofill:focus {
 			position: relative;
 			display: inline-block;
 			vertical-align: middle;
-			margin-right: rem(8px,8px);
-			padding: rem(8px,8px);
+			margin-right: rem(8px);
+			padding: rem(8px);
 			background-color: transparent;
-			border: rem(2px,2px) solid $secondary-100;
+			border: rem(2px) solid $secondary-100;
 			appearance: none;
 			cursor: pointer;
 		}
