--- a/sources/scss/base/_typography.scss
+++ b/sources/scss/base/_typography.scss
@@ -1,5 +1,5 @@
-@use "sass:math";
 @use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
 @use "@scss/abstracts/mixins" as *;
 
 /**
@@ -64,46 +64,46 @@ body {
 
         @if $key == "h1" {
             @include respond-below(xl) {
-                font-size: rem(42px, 42px);
+                font-size: rem(42px);
             }
 
             @include respond-below(md) {
-                font-size: rem(36px, 36px);
+                font-size: rem(36px);
             }
         } @else if $key == "h2" {
             @include respond-below(xl) {
-                font-size: rem(34px, 34px);
+                font-size: rem(34px);
             }
 
             @include respond-below(md) {
-                font-size: rem(29px, 29px);
+                font-size: rem(29px);
             }
         } @else if $key == "h3" {
             @include respond-below(md) {
-                font-size: rem(24px, 24px);
+                font-size: rem(24px);
             }
         } @else if $key == "h4" {
             @include respond-below(md) {
-                font-size: rem(20px, 20px);
+                font-size: rem(20px);
             }
         } @else if $key == "h5" {
             line-height: 1.3;
 
             @include respond-below(md) {
-                font-size: rem(18px, 18px);
+                font-size: rem(18px);
             }
         } @else if $key == "h6" {
             line-height: 1.3;
 
             @include respond-below(md) {
-                font-size: rem(17px, 17px);
+                font-size: rem(17px);
             }
         }
     }
 }
 
 p {
-    margin-bottom: rem(20px, 20px);
+    margin-bottom: rem(20px);
 
     &:last-child {
         margin-bottom: 0;
@@ -112,9 +112,9 @@ p {
 
 .eyebrow-text {
     position: relative;
-    font-size: rem(14px, 14px);
-    padding-left: rem(10px, 10px);
-    margin-bottom: rem(16px, 16px);
+    font-size: rem(14px);
+    padding-left: rem(10px);
+    margin-bottom: rem(16px);
     display: inline-block;
 
     &::before {
@@ -129,14 +129,14 @@ p {
 }
 
 :is(ul, ol) {
-    --ulol-left-padding: #{rem(20px, 20px)};
+    --ulol-left-padding: #{rem(20px)};
 
     padding-left: var(--ulol-left-padding);
-    margin-bottom: rem(15px, 15px);
+    margin-bottom: rem(15px);
 
     li {
-        padding-top: rem(6px, 6px);
-        padding-bottom: rem(6px, 6px);
+        padding-top: rem(6px);
+        padding-bottom: rem(6px);
 
         &:last-child {
             padding-bottom: 0;
@@ -167,8 +167,8 @@ ul {
                 >li {
                     &::before {
                         border: 1px solid $gray;
-                        height: rem(6px, 6px);
-                        width: rem(6px, 6px);
+                        height: rem(6px);
+                        width: rem(6px);
                     }
 
                     >ul {
@@ -180,7 +180,7 @@ ul {
                             }
 
                             &::before {
-                                top: em(16px, 16px);
+                                top: em(16px);
                                 background: currentcolor;
                                 border-radius: 0;
                             }
@@ -191,8 +191,8 @@ ul {
         }
 
         .bullet-check {
-            padding: 0 0 0 rem(36px, 36px);
-            margin-bottom: rem(10px, 10px);
+            padding: 0 0 0 rem(36px);
+            margin-bottom: rem(10px);
             position: relative;
 
             &::before {
@@ -230,7 +230,7 @@ ol {
             &::before {
                 content: counter(counter-1) ". ";
                 top: 10px;
-                font-size: em(14px, 14px);
+                font-size: em(14px);
             }
 
             >ol {
@@ -251,15 +251,15 @@ ol {
 blockquote {
     position: relative;
     display: block;
-    margin-bottom: rem(25px, 25px);
-    padding: rem(20px, 20px);
+    margin-bottom: rem(25px);
+    padding: rem(20px);
     text-align: left;
     line-height: 2;
-    font-size: rem(18px, 18px);
+    font-size: rem(18px);
     font-style: italic;
     color: $black;
     background-color: $gray;
-    border-left: rem(4px, 4px) solid $primary-100;
+    border-left: rem(4px) solid $primary-100;
 
     p {
         font-size: inherit;
@@ -272,9 +272,9 @@ blockquote {
 hr {
     width: 100%;
     height: 0;
-    margin: rem(30px, 30px) auto;
+    margin: rem(30px) auto;
     border: 0 $black solid;
-    border-top-width: rem(1px, 1px);
+    border-top-width: rem(1px);
     overflow: visible;
 }
 
@@ -309,7 +309,7 @@ a {
     }
 
     &.tab-outline {
-        outline-offset: rem(3px, 3px);
+        outline-offset: rem(3px);
         outline: 1px solid;
     }
 
@@ -359,15 +359,15 @@ table {
     td,
     th {
         vertical-align: bottom;
-        border-bottom: rem(1px, 1px) solid $gray;
-        padding: rem(10px, 10px);
+        border-bottom: rem(1px) solid $gray;
+        padding: rem(10px);
     }
 }
 
 /* stylelint-disable selector-class-pattern */
 .fancybox__content {
     >.carousel__button.is-close {
-        top: rem(-50px, -50px);
+        top: rem(-50px, );
         right: 0;
     }
 }
