--- a/sources/scss/layout/_default.scss
+++ b/sources/scss/layout/_default.scss
@@ -1,19 +1,20 @@
 @use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
 @use "@scss/abstracts/mixins" as *;
 
 :root {
-	--space-lg: #{rem(100px,100px)};
-	--space-md: #{rem(75px,75px)};
-	--space-sm: #{rem(50px,50px)};
+	--space-lg: #{rem(100px)};
+	--space-md: #{rem(75px)};
+	--space-sm: #{rem(50px)};
 
 	@include respond-below(xl) {
-		--space-lg: #{rem(50px,50px)};
-		--space-md: #{rem(50px,50px)};
+		--space-lg: #{rem(50px)};
+		--space-md: #{rem(50px)};
 	}
 
 	@include respond-below(md) {
-		--space-md: #{rem(40px,40px)};
-		--space-sm: #{rem(30px,30px)};
+		--space-md: #{rem(40px)};
+		--space-sm: #{rem(30px)};
 	}
 }
 
@@ -81,7 +82,7 @@
 
 /* Pagination */
 .pagination {
-	padding: rem(30px,30px) 0;
+	padding: rem(30px) 0;
 
 	ul {
 		@include flex-center;
@@ -94,7 +95,7 @@
 	li {
 		position: relative;
 		padding: 0;
-		margin: 0 rem(10px,10px);
+		margin: 0 rem(10px);
 		font-weight: 700;
 		color: rgba($primary-100, 0.60);
 
@@ -129,7 +130,7 @@
 				position: absolute;
 				inset: -2px -4px;
 				border: 1px solid $gray;
-				border-radius: rem(6px,6px);
+				border-radius: rem(6px);
 				opacity: 0;
 				visibility: hidden;
 			}
