--- a/sources/scss/layout/_footer.scss
+++ b/sources/scss/layout/_footer.scss
@@ -1,4 +1,6 @@
 @use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
+@use "@scss/abstracts/mixins" as *;
 
 /* --- footer --- */
 .main-footer {
