--- a/sources/scss/templates/_comp-hero.scss
+++ b/sources/scss/templates/_comp-hero.scss
@@ -1,5 +1,6 @@
-// variable and mixin
-// @use 'abstracts/core' ;
+@use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
+@use "@scss/abstracts/mixins" as *;
 
 .hero-style {
     @include container-space(left);
