--- a/sources/scss/base/_utilities.scss
+++ b/sources/scss/base/_utilities.scss
@@ -342,3 +342,14 @@ $sides-x: left, right;
 		}
 	}
 }
+
+/* WordPress default alignment */
+.alignwide {
+	--container-width: #{$container-width};
+
+	@extend %container;
+}
+
+.alignfull {
+	@extend %container;
+}
