--- a/sources/scss/base/_buttons.scss
+++ b/sources/scss/base/_buttons.scss
@@ -37,8 +37,7 @@
 		pointer-events: none;
 	}
 
-	&:hover,
-	a:hover & {
+	&:hover {
 		color: $primary-100;
 		background-color: $secondary-100;
 		text-decoration: none;
@@ -56,34 +55,15 @@
 			visibility: visible;
 		}
 	}
-
-	// Dark
-	.bg-dark &,
-	.bg-secondary &,
-	&.-dark {
-		color: $primary-100 !important;
-		background-color: $white;
-
-		&:hover,
-		a:hover & {
-			background-color: $secondary-100;
-		}
-
-		&:focus {
-			&::before {
-				border-color: $white;
-			}
-		}
-	}
-
-	&.-sm {
-		font-size: rem(12px);
-		padding: rem(4px) rem(9px);
-	}
 }
 
 .btn {
 	@extend %btn;
+
+	&-sm {
+		font-size: rem(12px);
+		padding: rem(4px) rem(9px);
+	}
 
 	&-link {
 		position: relative;
@@ -111,14 +91,13 @@
 			@include icon("c");
 
 			display: inline-flex;
-			font-size: em(9px,);
+			font-size: rem(9px);
 			margin-left: 8px;
 			color: $primary-100;
 			transition: 0.4s ease;
 		}
 
-		&:hover,
-		a:hover & {
+		&:hover {
 			color: $secondary-100;
 			text-decoration: none;
 			border-color: currentcolor;
@@ -129,42 +108,12 @@
 			}
 		}
 
-		&:focus,
-		a:focus & {
+		&:focus {
 			outline: 0;
 
 			&::before {
 				opacity: 1;
 				visibility: visible;
-			}
-		}
-
-		// dark
-		.bg-dark &,
-		.bg-secondary &,
-		&.-dark {
-			color: $white;
-
-			&:hover,
-			a:hover & {
-				color: $secondary-100;
-			}
-
-			&:focus {
-				&::before {
-					border-color: $white;
-				}
-			}
-		}
-
-		.bg-secondary & {
-			&:hover,
-			a:hover & {
-				color: $primary-100;
-
-				&::after {
-					color: inherit;
-				}
 			}
 		}
 	}
