--- a/sources/scss/abstracts/_variables.scss
+++ b/sources/scss/abstracts/_variables.scss
@@ -17,8 +17,8 @@ $primary-100: #1eb2a6 !default;
 $secondary-100: #ffa34d !default;
 
 // Start with assigning color names to specific hex values.
-$white: #ffffff !default;
-$black: #000000 !default;
+$white: #fff !default;
+$black: #000 !default;
 $gray: #dee3e2 !default;
 
 // Body color
