--- a/sources/scss/layout/_device-menu.scss
+++ b/sources/scss/layout/_device-menu.scss
@@ -135,6 +135,7 @@ $hamburger: ".hamburger";
     }
 
     .menu-wrap {
+        /* stylelint-disable custom-property-pattern */
         --leftSlide: 0;
 
         position: absolute;
@@ -143,7 +144,7 @@ $hamburger: ".hamburger";
         top: 0;
         right: var(--leftSlide);
         transition: 0.4s ease;
-
+        /* stylelint-enable custom-property-pattern */
         .menu-wrap {
             right: -100%;
             opacity: 0;
