--- a/sources/scss/layout/_header.scss
+++ b/sources/scss/layout/_header.scss
@@ -1,7 +1,8 @@
 @use "@scss/abstracts/variables" as *;
 @use "@scss/abstracts/function" as *;
 @use "@scss/abstracts/mixins" as *;
-/*--- header ---*/
+
+/* --- header --- */
 .main-header {
 	position: relative;
 	width: 100%;
@@ -22,96 +23,106 @@
 		flex: 1 1 auto;
 		padding-left: rem(15px);
 	}
+
 	.navigation {
 		display: none;
 		word-break: keep-all;
+
 		@include respond-above('lg') {
 			display: block;
 		}
-
+		/* stylelint-disable max-nesting-depth */
 		nav {
-			> ul {
-				display: flex;
-				>li {
+			ul {
+				padding: 0;
+				margin: 0;
+				list-style: none;
+	
+				li {
+					padding: 0;
+					list-style: none;
+
+					a {
+						display: block;
+						padding: 10px 20px;
+						text-decoration: none;
+					}
+					
 					&.menu-item-has-children {
+						position: relative;
+
 						>a {
-							&:after {
-								border-right: 1px solid $primary-100;
-								border-top: 1px solid $primary-100;
-								top: 13px;
-								transform: rotate(135deg);
+							padding-right: 40px;
+
+							&::after {
+								position: absolute;
+								transform: rotate(45deg);
+								top: 17px;
+								right: 20px;
+								width: 10px;
+								height: 10px;
+								border-right: 1px solid $white;
+								border-top: 1px solid $white;
+								content: "";
+							}
+						}
+					}
+
+					> ul {
+						display: flex;
+						
+						>li {
+							&.menu-item-has-children {
+								>a {
+									&::after {
+										top: 13px;
+										transform: rotate(135deg);
+										border-right: 1px solid $primary-100;
+										border-top: 1px solid $primary-100;
+									}
+								}
+							}
+						}
+					}
+
+					&:hover {
+						>ul {
+							opacity: 1;
+							pointer-events: auto;
+						}
+					}
+				}
+	
+				&.sub-menu {
+					position: absolute;
+					left: 0;
+					top: 100%;
+					min-width: 200px;
+					opacity: 0;
+					pointer-events: none;
+
+					.sub-menu {
+						left: 100%;
+						top: 0;
+					}
+
+					li {
+						a {
+							display: block;
+							color: $white;
+							background-color: $primary-100;
+						}
+
+						&:not(:last-child) {
+							a {
+								border-bottom: 1px solid rgba($white, 0.3);
 							}
 						}
 					}
 				}
 			}
 		}
-
-		ul {
-			padding: 0;
-			margin: 0;
-			list-style: none;
-
-			li {
-				padding: 0;
-				list-style: none;
-				&:hover {
-					>ul {
-						opacity: 1;
-						pointer-events: auto;
-					}
-				}
-				&.menu-item-has-children {
-					position: relative;
-					>a {
-						padding-right: 40px;
-						&:after {
-							position: absolute;
-							right: 0;
-							top: 17px;
-							right: 20px;
-							transform: rotate(45deg);
-							width: 10px;
-							height: 10px;
-							border-right: 1px solid $white;
-							border-top: 1px solid $white;
-							content: "";
-						}
-					}
-				}
-
-				a {
-					text-decoration: none;
-					padding: 10px 20px;
-					display: block;
-				}
-			}
-
-			&.sub-menu {
-				position: absolute;
-				left: 0;
-				top: 100%;
-				min-width: 200px;
-				opacity: 0;
-				pointer-events: none;
-				.sub-menu {
-					left: 100%;
-					top: 0;
-				}
-				li {
-					a {
-						display: block;
-						color: $white;
-						background-color: $primary-100;
-					}
-					&:not(:last-child) {
-						a {
-							border-bottom: 1px solid rgba($white, 0.3);
-						}
-					}
-				}
-			}
-		}
+		/* stylelint-enable max-nesting-depth */
 
 	}
 }
