Javascript menu issue fixed

--- a/sources/scss/layout/_device-menu.scss
+++ b/sources/scss/layout/_device-menu.scss
@@ -154,7 +154,6 @@ $hamburger: ".hamburger";
         > .menu-inner {
             max-height: 100%;
             padding-top: rem(85px);
-            padding-bottom: rem(20px);
             background-color: $white;
             pointer-events: auto;
             overflow: hidden auto;
@@ -168,6 +167,7 @@ $hamburger: ".hamburger";
         margin: 0;
         padding: 0 20px;
         transition: 0.4s ease;
+        box-shadow: 0 0 10px 0 rgba($black, 0.2);
 
         li {
             &.is-open {
@@ -258,10 +258,6 @@ $hamburger: ".hamburger";
                 cursor: pointer;
                 z-index: 1;
 
-                &:not(.trigger-caret) {
-                    pointer-events: none;
-                }
-
                 &::before {
                     @extend %after;
 
@@ -300,6 +296,33 @@ $hamburger: ".hamburger";
                     display: block;
                 }
             }
+            
+            &.back-click {
+                position: relative;
+                width: 100%;
+                padding: 10px 0 10px 20px;
+                order: -1;
+                color: currentcolor;
+                font-weight: 400;
+    
+                &::before {
+                    --sarrow-width: 10px;
+                    
+                    content: "";
+                    position: absolute;
+                    left: 2px;
+                    top: 20px;
+                    transform: rotate(-135deg);
+                    display: flex;
+                    align-items: center;
+                    margin: auto;
+                    width: var(--sarrow-width);
+                    height: var(--sarrow-width);
+                    border: calc(var(--sarrow-width) / 4) solid $primary-100;
+                    border-left: 0;
+                    border-bottom: 0;
+                }
+            }
         }
 
         ul {
@@ -324,28 +347,6 @@ $hamburger: ".hamburger";
             > .sub-menu {
                 position: absolute;
                 left: 100%;
-            }
-        }
-
-        .back-click {
-            width: 100%;
-            order: -1;
-            color: currentcolor;
-            padding: 15px 0;
-            font-weight: 400;
-
-            &::before {
-                @include icon("a");
-
-                position: static;
-                display: inline-block;
-                width: auto;
-                height: auto;
-                color: $primary-100;
-                margin-right: 15px;
-                margin-bottom: 3px;
-                font-size: 18px;
-                border: 0;
             }
         }
     }
