--- a/sources/scss/components/_hero-banner.scss
+++ b/sources/scss/components/_hero-banner.scss
@@ -1,6 +1,6 @@
-@use "@scss/abstracts/variables" as *;
-@use "@scss/abstracts/function" as *;
-@use "@scss/abstracts/mixins" as *;
+@use "@style/abstracts/variables" as *;
+@use "@style/abstracts/function" as *;
+@use "@style/abstracts/mixins" as *;
 
 .entry-banner {
     position: relative;
