--- a/sources/scss/abstracts/_variables.scss
+++ b/sources/scss/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-@use "@scss/abstracts/function" as *;
+@use "@style/abstracts/function" as *;
 
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass variables.
