--- a/sources/scss/templates/_comp-hero.scss
+++ b/sources/scss/templates/_comp-hero.scss
@@ -1,6 +1,6 @@
-@use "@scss/abstracts/variables" as *;
-@use "@scss/abstracts/function" as *;
-@use "@scss/abstracts/mixins" as *;
+@use "@style/abstracts/variables" as *;
+@use "@style/abstracts/function" as *;
+@use "@style/abstracts/mixins" as *;
 
 .hero-style {
     @include container-space(left);
