--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2257,4 +2257,4 @@ select:-webkit-autofill:focus {
   background: #1eb2a6;
 }
 
-/*# sourceMappingURL=main.dev.css.map*/
+/*# sourceMappingURL=main.css.map*/
