--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/*!
-Theme Name: MyTheme
+/*
+Theme Name: ZealBase
 Theme URI: https://yourthemewebsite.com/
-Author: ZealousWeb Team
-Author URI: https://zealousweb.com/
-Description: MyTheme is a blank canvas for your WordPress project.
+Author: ZealBase Team
+Author URI: https://domain.com/
+Description: ZealBase is a blank canvas for your WordPress project.
 Version: 1.0.0
 Tested up to: 6.7
 Requires PHP: 7.4
