--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: ZealBase
+Theme Name: WPNest
 Theme URI: https://yourthemewebsite.com/
-Author: ZealBase Team
+Author: WPNest Team
 Author URI: https://domain.com/
-Description: ZealBase is a blank canvas for your WordPress project.
+Description: WPNest is a blank canvas for your WordPress project.
 Version: 1.0.0
 Tested up to: 6.7
 Requires PHP: 7.4
